[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycli"
version = "0.1.0"
description = "A Python CLI framework with interactive prompts, forms, and cross-platform input handling"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Diego Chan", email = "diego.chan@utp.ac.pa" }]
dependencies = []

[project.urls]
Repository = "https://github.com/diegochan25/pycli.git"

[tool.hatch.build.targets.wheel]
packages = ["pycli"]
